feat: player most played maps API
