# swagger2.yaml
@@ -271,6 +271,31 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/Error'
+  /players/{steam_id}/most-played-maps:
+    get:
+      tags:
+      - player
+      summary: Получение списка карт сыгранных наибольшее кол-во раз
+      operationId: getMostPlayedMaps
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: steam_id
+        in: path
+        description: Steam ID игрока
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/MostPlayedMaps'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Error'
   /teams:
     get:
       tags:
@@ -382,7 +407,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
   /teams/{team_id}/players/{steam_id}/captain:
-    put:
+    post:
       tags:
       - team
       summary: Назначить игрока капитаном команды
@@ -794,6 +819,10 @@ definitions:
         type: string
         x-nullable: false
     x-nullable: false
+  MostPlayedMaps:
+    type: array
+    items:
+      $ref: '#/definitions/MostPlayedMaps_inner'
   Match:
     type: object
     properties:
@@ -1248,6 +1277,25 @@ definitions:
       class:
         type: string
         x-nullable: false
+    x-nullable: false
+  MostPlayedMaps_inner:
+    type: object
+    required:
+    - map_icon_url
+    - map_name
+    - played_times
+    properties:
+      map_name:
+        type: string
+        x-nullable: false
+      map_icon_url:
+        type: string
+        x-nullable: false
+      played_times:
+        type: integer
+        format: int8
+        x-nullable: false
+    x-go-name: MostPlayedMap
     x-nullable: false
   MatchTeam_scoreboard:
     type: object
